--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "my-app",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "start": "next dev",
     "build": "next build",
-    "start": "next start",
+    "serve": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.1.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
